tests/expectations/parser-expression/expression/literal/comment_fail.out
Error [EPAR0370050]: Could not lex the following content: `/*`.

    --> test_0:1:1
     |
   1 | /*
     | ^^
Error [EPAR0370050]: Could not lex the following content: `/* test`.

    --> test_1:1:1
     |
   1 | /* test
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found '/'
    --> test_2:1:1
     |
   1 | / /
     | ^
Error [EPAR0370003]: unexpected EOF
    --> test_3:1:4
     |
   1 | /*/Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found '*'
    --> test_4:1:1
     |
   1 | */
     | ^
Error [EPAR0370050]: Could not lex the following content: `🦀`.

    --> test_5:1:1
     |
   1 | 🦀**/
     | ^^^^
Error [EPAR0370050]: Could not lex the following content: `🦀`.

    --> test_6:1:2
     |
   1 | /🦀*/
     |  ^^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found '/'
    --> test_6:1:1
     |
   1 | /🦀*/
     | ^
Error [EPAR0370050]: Could not lex the following content: `/*🦀/`.

    --> test_7:1:1
     |
   1 | /*🦀/
     | ^^
Error [EPAR0370050]: Could not lex the following content: `/**🦀`.

    --> test_8:1:1
     |
   1 | /**🦀
     | ^^
Error [EPAR0370050]: Could not lex the following content: `/*🦀`.

    --> test_9:1:1
     |
   1 | /*🦀
     | ^^
Error [EPAR0370050]: Could not lex the following content: `/*/*`.

    --> test_10:1:37
     |
   1 | /*/*/*/*/*/*/*/*/*/*/*/*/*/*/*/*/*/*/*/*
     |                                     ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found '*'
    --> test_10:1:6
     |
   1 | /*/*/*/*/*/*/*/*/*/*/*/*/*/*/*/*/*/*/*/*
     |      ^
